--- a/Week 6 (AXIOS API)/Splash App/index.html
+++ b/Week 6 (AXIOS API)/Splash App/index.html
@@ -15,8 +15,8 @@
 
         <section id="search-section">
             <div>
-                <input type="text" placeholder="Please search for an image!">
-                <button>Search</button>
+                <input id="searched-keyword" type="text" placeholder="Please search for an image!">
+                <button onclick="getImageDataByKeyword()">Search</button>
             </div>
         </section>
 
